[project]
name = "fcmtools"
version = "0.1.0"
description = "Fuzzy Cognitive Map modeling and scenario analysis tools"
authors = [{ name = "Kyle Metta", email = "kyle@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "pandas", "networkx", "rapidfuzz", "xlrd"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"